--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>About</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="css/reset.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/reset.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
     <script src="main.js"></script>
 </head>
 
@@ -25,7 +25,7 @@
     <div id="main-container" class="container">
         <section class="main-container">
                 <h1>About Me</h1>
-                <img src="images/2.jpg" 
+                <img src="assets/images/2.jpg" 
                 class="auth-image" alt="Bio Pic">
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt, expedita. Reprehenderit obcaecati iste exercitationem quod non, consequuntur, quia excepturi aliquid eveniet suscipit quas expedita est, voluptatum atque perspiciatis nobis sequi.
